[package]
name = "bbn_services"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "bbn_services"
path = "src/server.rs"

[dependencies]
axum = "0.8.8"
tokio = { version = "1.50", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
reqwest = { version = "0.13.2", features = ["json", "rustls-tls"] }
chrono = "0.4.44"
